
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-June-11 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    Online doc format changed to PDF format.
    This is **very** easier to handle, because :
    - Openoffice has a very good pdf export function.
    - Only one file for application
    - Is standart (The old html format used a zipped archive, not standart)
    - the doc tree is less complex (see doc/help/fr or doc/help/en for the new tree).
    
    If a localized doc file is not found, the english version is automatically loaded instead.
    No need to copy the same pdf file in subdirectory.
    

2008-June-06 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    minor changes
    added void SetLocaleTo_C_standard(void) and void SetLocaleTo_Default(void)
    This is wrapper to the C setlocale( LC_NUMERIC, "C" )
    and setlocale( LC_NUMERIC, "" )function,
    but could make more easier an optional use of locale in kicad in floating point notations


2008-May-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    removed GPC library due to its unacceptable (and stupid) license
    using the powerfull kbool library insteed (see polygon/kbool)
+all:
    minor changes


2008-May-22 UPDATE Martin Kajdas <kajdas@cox.com>
================================================================================
+all
    Moved all XPM files to <kicad>/bitmaps directory and fixed all related files
+PCBnew
    Changed File/Export shortcut from 'x' to 'e'


2008-May-21 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>